--- a/config/boards/shields/charybdis/charybdis.dtsi
+++ b/config/boards/shields/charybdis/charybdis.dtsi
@@ -1,5 +1,9 @@
 #include <dt-bindings/zmk/matrix_transform.h>
 
+zephyr_udc0: &usbd {
+    status = "okay";
+};
+
 / {
     chosen {
         zmk,kscan = &kscan0;
